@@ -1,3 +1,11 @@
+2012-04-13  Sergio Martin <sergio.martin@artica.es>
+
+	* include/functions_visual_map.php
+	include/ajax/visual_console_builder.ajax.php
+	godmode/reporting/visual_console_builder.editor.js: Fixed several
+	bugs in the simple value item in the visual console and unified 
+	repeated code
+
 2012-04-12 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
 
 	* include/javascript/jquery.pandora.js
